--- a/tests/config.neon
+++ b/tests/config.neon
@@ -43,3 +43,9 @@ services:
 			- addResource('user')
 			- allow('admin', 'admin')
 			- allow(['user', 'admin'], 'user')
+
+
+	translator: Kollarovic\Navigation\Test\MockTranslator
+	nette.latteFactory:
+		setup:
+			- addFilter('translate', [@translator, 'translate'])
