--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,24 @@
 		"nette/robot-loader": "^3.0",
 		"nette/security": "^3.0",
 		"nette/utils": "^3.0",
-		"latte/latte": "^2.5"
+		"latte/latte": "^2.5",
+		"phpstan/phpstan-nette": "^0.11.1"
 	},
 
 	"require-dev": {
-		"nette/tester": "~1.3"
+		"nette/tester": "~1.3",
+		"phpstan/phpstan": "^0.11.8"
 	},
 
 	"autoload": {
 		"psr-0": {
 			"Kollarovic\\Navigation": "src/"
 		}
+	},
+
+	"scripts": {
+		"phpstan": "vendor/bin/phpstan analyse -c phpstan.neon src --level 7",
+		"test": "vendor/bin/tester tests"
 	}
+
 }
