--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
 		"nette/robot-loader": "^3.0",
 		"nette/security": "^3.0",
 		"nette/utils": "^3.0",
-		"latte/latte": "^2.5",
-		"phpstan/phpstan-nette": "^0.11.1"
+		"latte/latte": "^2.5"
 	},
 
 	"require-dev": {
 		"nette/tester": "~1.3",
-		"phpstan/phpstan": "^0.11.8"
+		"phpstan/phpstan": "^0.11.8",
+		"phpstan/phpstan-nette": "^0.11.1"
 	},
 
 	"autoload": {
