--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,18 @@
 	],
 
 	"require": {
-		"php": ">=7.1",
-		"nette/application": "^3.0",
-		"nette/bootstrap": "^3.0",
-		"nette/robot-loader": "^3.0",
-		"nette/security": "^3.0",
-		"nette/utils": "^3.0",
-		"latte/latte": "^2.5"
+		"php": ">= 8.0",
+		"nette/application": "^3.1",
+		"nette/bootstrap": "^3.2",
+		"nette/robot-loader": "^4.0",
+		"nette/security": "^3.1",
+		"nette/utils": "^4.0",
+		"latte/latte": "^3.0"
 	},
 
 	"require-dev": {
-		"nette/tester": "~1.3",
-		"phpstan/phpstan": "^0.11.8",
-		"phpstan/phpstan-nette": "^0.11.1"
+		"phpstan/phpstan-nette": "^1.2",
+		"nette/tester": "^2.5"
 	},
 
 	"autoload": {
